# drama

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
app/assets/styles/: global.scss  tailwind.css
app/components/common/: AiGenerateTextarea.vue  DangerConfirmDialog.vue  ProjectDeleteDialog.vue  ToastContainer.vue  UiAssetPickerDialog.vue  UiDialog.vue
app/components/editor/: FlowNodeCard.vue  NodeFlowEditor.vue  NodePropertyPanel.vue  ValueChangeEditor.vue
app/composables/: useAiAppSettings.ts  useExportGame.ts  useToast.ts
app/layouts/: default.vue  editor.vue
app/pages/: index.vue
app/pages/project/[id]/: achievements.vue  assets.vue  chapters.vue  characters.vue  collection.vue  startpage.vue  values.vue
app/stores/: project.ts
app/types/: index.ts
app/utils/: ai.ts  creativeAssistant.ts  exportGame.ts  factory.ts  generateAsset.ts  runtime.ts  seedance.ts  seedream.ts  url.ts
scripts/: build-sample-html.mjs  check-runtime.mjs  test-creative-assistant.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project.rs
