[package]
name = "drama-editor"
version = "0.1.0"
description = "互动影游编辑器"
authors = ["you"]
edition = "2021"

[lib]
name = "drama_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.49.0", features = ["full"] }
base64 = "0.22"
